--- a/Mainpage/index.css
+++ b/Mainpage/index.css
@@ -144,7 +144,7 @@
 .Flag{
     height: 100%;
     width: 6%;
-    background-color: white;
+    /* background-color: white; */
     display: flex;
     align-items: center;
     justify-content: center;
